--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,14 @@
 @import "tailwindcss";
+
+
+body {
+    font-family: 'Poppins';
+    background: black;
+    color:white
+}
+#talkjs-container {
+     width: '50%';
+     /* maxWidth: '1200px'; */
+      height: '630px'
+  }
+  
